# bagla-engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  xmake.lua
include/bagla-engine/: EventHandler.h  GameObject.h  IEventHandler.h  IGameObject.h  MathExtensions.h  bar.h  foo.h
include/bagla-engine/animation/: Animation.h  AnimationComponent.h  AnimationContainer.h
include/bagla-engine/asset-manager/: AssetManager.h
include/bagla-engine/camera/: Camera.h
include/bagla-engine/graphics/: ParallaxBackground.h  ParallaxLayer.h  RoundedRectangleShape.h
include/bagla-engine/gui/: Button.h  CheckBox.h  FocusLock.h  Label.h  Slider.h  Widget.h
include/bagla-engine/map/: Map.h  ObjectLayer.h  TileLayer.h
include/bagla-engine/physics/: ContactListener.h  DebugDraw.h  PhysicsWorld.h  RigidBody.h
include/bagla-engine/states/: State.h  StateManager.h  StateTransition.h
src/: bar.cpp  foo.cpp
src/animation/: Animation.cpp  AnimationComponent.cpp  AnimationContainer.cpp
src/asset-manager/: AssetManager.cpp
src/camera/: Camera.cpp
src/graphics/: ParallaxBackground.cpp  ParallaxLayer.cpp  RoundedRectangleShape.cpp
src/gui/: Button.cpp  CheckBox.cpp  FocusLock.cpp  Slider.cpp
src/map/: Map.cpp  ObjectLayer.cpp  TileLayer.cpp  TileLayerChunk.cpp
src/physics/: ContactListener.cpp  DebugDraw.cpp  PhysicsWorld.cpp  RigidBody.cpp
src/states/: StateManager.cpp  StateTransition.cpp
